update env example to match better settings.py format

--- a/.env.example
+++ b/.env.example
@@ -15,11 +15,11 @@ MAILJET_FROM_EMAIL=
 
 # Development Database Settings
 # Uncomment and set these if you use a different database in development.
-# DEV_DATABASE_NAME=
-# DEV_DATABASE_USER=
-# DEV_DATABASE_PASSWORD=
-# DEV_DATABASE_HOST=
-# DEV_DATABASE_PORT=
+# DEVELOPMENT_DATABASE_NAME=
+# DEVELOPMENT_DATABASE_USER=
+# DEVELOPMENT_DATABASE_PASSWORD=
+# DEVELOPMENT_DATABASE_HOST=
+# DEVELOPMENT_DATABASE_PORT=
 
 # Test Server Database Settings
 # Uncomment and set these if you use a different database for your test server.
@@ -31,15 +31,15 @@ MAILJET_FROM_EMAIL=
 
 # Sandbox Server Database Settings
 # Uncomment and set these if you use a different database for your test server.
-# SBX_DATABASE_NAME=
-# SBX_DATABASE_USER=
-# SBX_DATABASE_PASSWORD=
-# SBX_DATABASE_HOST=
-# SBX_DATABASE_PORT=
+# SANDBOX_DATABASE_NAME=
+# SANDBOX_DATABASE_USER=
+# SANDBOX_DATABASE_PASSWORD=
+# SANDBOX_DATABASE_HOST=
+# SANDBOX_DATABASE_PORT=
 
 # Production Database Settings
-PROD_DATABASE_NAME=
-PROD_DATABASE_USER=
-PROD_DATABASE_PASSWORD=
-PROD_DATABASE_HOST=
-PROD_DATABASE_PORT=
+# PRODUCTION_DATABASE_NAME=
+# PRODUCTION_DATABASE_USER=
+# PRODUCTION_DATABASE_PASSWORD=
+# PRODUCTION_DATABASE_HOST=
+# PRODUCTION_DATABASE_PORT=
