--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,18 @@ media
 
 # If you are using macOS
 .DS_Store
+
+# Node.js
+/node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Vite
+.vite/
+
+# Vue
+/frontend/public/manifest.json
+/frontend/node_modules/
+/frontend/dist/
